fixed the base url link

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,12 @@
     {% endif %}
   </head>
   <body>
-    {{ title }}
+    <!-- popular movies -->
+    <h3>Popular Movies</h3>
+    <ul>
+      {% for popular_movie in popular %}
+      <li>{{ popular_movie.title}}</li>
+      {% endfor %}
+    </ul>
   </body>
 </html>
