--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,8 +15,23 @@
     <h3>Popular Movies</h3>
     <ul>
       {% for popular_movie in popular %}
-      <li>{{ popular_movie.title}}</li>
+      <li>{{ popular_movie.title }}</li>
       {% endfor %}
+    </ul>
+
+    <!-- upcoming movies -->
+    <h3>upcoming Movies</h3>
+    <ul>
+      {% for upcoming_movie in upcoming%}
+      <li>{{ upcoming_movie.title }}</li>
+      {% endfor%}
+    </ul>
+
+    <h3>Now Showing Movie</h3>
+    <ul>
+      {% for now_showing_movie in now_showing%}
+      <li>{{ now_showing_movie.title }}</li>
+      {% endfor%}
     </ul>
   </body>
 </html>
