--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,5 @@
+{% import 'macros.html' as macro %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,24 +16,21 @@
     <!-- popular movies -->
     <h3>Popular Movies</h3>
     <ul>
-      {% for popular_movie in popular %}
-      <li>{{ popular_movie.title }}</li>
-      {% endfor %}
+    
+      {{macro.displayMovieList(popular) }}
+    
     </ul>
 
     <!-- upcoming movies -->
     <h3>upcoming Movies</h3>
     <ul>
-      {% for upcoming_movie in upcoming%}
-      <li>{{ upcoming_movie.title }}</li>
-      {% endfor%}
+      {{macro.displayMovieList(upcoming)}}
     </ul>
 
     <h3>Now Showing Movie</h3>
     <ul>
-      {% for now_showing_movie in now_showing%}
-      <li>{{ now_showing_movie.title }}</li>
-      {% endfor%}
+      {{ macro.displayMovieList(now_showing)}}
+     
     </ul>
   </body>
 </html>
