extended the layout html to other pages

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,36 +1,25 @@
-{% import 'macros.html' as macro %}
+{% extends 'layout.html'%} {% import 'macros.html' as macro %} {% block content
+%}
+<!-- popular movies -->
+<h3>Popular Movies</h3>
+<ul>
+  {{
+    macro.displayMovieList(popular)
+  }}
+</ul>
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    {%if title %}
-    <title>{{ title }}</title>
-    {% else %}
-    <title>Welcome to Watchlist</title>
-    {% endif %}
-  </head>
-  <body>
-    <!-- popular movies -->
-    <h3>Popular Movies</h3>
-    <ul>
-    
-      {{macro.displayMovieList(popular) }}
-    
-    </ul>
+<!-- upcoming movies -->
+<h3>upcoming Movies</h3>
+<ul>
+  {{
+    macro.displayMovieList(upcoming)
+  }}
+</ul>
 
-    <!-- upcoming movies -->
-    <h3>upcoming Movies</h3>
-    <ul>
-      {{macro.displayMovieList(upcoming)}}
-    </ul>
-
-    <h3>Now Showing Movie</h3>
-    <ul>
-      {{ macro.displayMovieList(now_showing)}}
-     
-    </ul>
-  </body>
-</html>
+<h3>Now Showing Movie</h3>
+<ul>
+  {{
+    macro.displayMovieList(now_showing)
+  }}
+</ul>
+{% endblock content%}
