--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,20 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    {%if title %}
-    <title>{{ title }}</title>
-    {% else %}
-    <title>Welcome to Watchlist</title>
-    {% endif %}
-  </head>
-  <body>
-      <!-- Content block -->
-      {% block content %}
-      {% endblock%}
-    
-  </body>
-</html>
+{% extends 'bootstrap/layout.html'%}
