add a navbar block to the base html fils

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,5 @@
-{% extends 'layout.html'%} {% import 'macros.html' as macro %} {% block content
-%}
+{% extends 'base.html'%} {% import 'macros.html' as macro %} {% block
+content%}
 <!-- popular movies -->
 <h3>Popular Movies</h3>
 <ul>
