--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -1,2 +1,2 @@
-{% extends 'layout.html'%} {%block content%} Movie{{ id }}
+{% extends 'base.html'%} {%block content%} Movie{{ id }}
 {%endblock content%}
