--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -1,2 +1,16 @@
-{% extends 'base.html'%} {%block content%} Movie{{ id }}
+{% extends 'base.html'%} {%block content%} 
+<div class="container">
+    <!-- poster bg -->
+    <div class="row">
+        <div class="col-xs-6 col-sm-6 col-lg-6 posterPath" style="background:url({{movie.poster}}) no-repeat center center">
+
+        </div>
+
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 movie-details">
+            <h3>{{movie.title}}</h3>
+            <p class="overview">{{ movie.overview}}</p>
+            <p class="ratings"><b>{{ movie.vote_average}}</b>- <i>{{ movie.vote_count}} votes</i></p>
+        </div>
+    </div>
+</div>
 {%endblock content%}
