--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,8 @@
-{% extends 'base.html'%} {% import 'macros.html' as macro %} {% block
-content%}
+{% extends 'base.html'%} {% import 'macros.html' as macro %} {% block styles %}
+{{ super() }}
+<link rel="stylesheet" href="{{ url_for('static',filename='css/index.css')}}" />
+
+{% endblock styles %} {% block content%}
 <!-- popular movies -->
 <h3>Popular Movies</h3>
 <ul>
