--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -13,6 +13,9 @@
         <b>{{ movie.vote_average }}</b
         >- <i>{{ movie.vote_count }} votes</i>
       </p>
+      <a class="ratings" href="/movie/review/new/{{ movie.id }}">
+        Write a new review</a
+      >
     </div>
   </div>
 </div>
