--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%} {% block content%}
+{% import 'macros.html' as macro%} {% extends 'base.html'%} {% block content%}
 <div class="container">
   <!-- poster bg -->
   <div class="row">
@@ -17,6 +17,25 @@
         Write a new review</a
       >
     </div>
+  </div>
+
+  <div class="row">
+    <h1>Reviews</h1>
+    <hr />
+
+    {% if reviews %}
+    {{ macro.displayReviews(reviews) }}
+
+    {% else%}
+    <h3 class="text-center">This movie has no reviews</h3>
+
+    <a
+      class="btn btn-success btn-lg text-center"
+      href="/movie/review/new/{{ movie.id }}"
+    >
+      Write a new review</a
+    >
+    {% endif %}
   </div>
 </div>
 {%endblock content%}
